GC Dental/src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Meeting_Type__c</fullName>
        <label>Meeting Type</label>
        <picklist>
            <picklistValues>
                <fullName>Received a call from Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Made Phone call to Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visited the Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Agenda Visits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Next_Visit_Date__c</fullName>
        <label>Next Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Visit_Time__c</fullName>
        <label>Next Visit Time</label>
        <picklist>
            <picklistValues>
                <fullName>12:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:15 AM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Outcome_of_Meeting_Other__c</fullName>
        <label>Outcome of Meeting (Other)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outcome_of_Meeting__c</fullName>
        <label>Outcome of Meeting</label>
        <picklist>
            <picklistValues>
                <fullName>Placed an order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asked me to visit again</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Could not meet him</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Items not required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Order_No__c</fullName>
        <label>Sales Order No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Set_Remainder_Manually__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Set Reminder By Manually</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>